--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metaplex-foundation/js": "^0.20.1",
     "@solana/wallet-adapter-react": "^0.15.37",
     "@solana/wallet-adapter-react-ui": "^0.9.37",
     "@solana/wallet-adapter-wallets": "^0.19.36",
+    "@solana/web3.js": "^1.98.2",
     "@tabler/icons-react": "^3.31.0",
     "install": "^0.13.0",
     "next": "15.3.1",
+    "nft.storage": "^7.2.0",
     "npm": "^11.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
